--- a/DDAYGO/ViewController/My/Setting/ReceivingAddress/FrontPageReceivingAddress/Cell/AddressTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Setting/ReceivingAddress/FrontPageReceivingAddress/Cell/AddressTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,15 +13,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="133" id="KGk-i7-Jjw" customClass="AddressTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="133"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="136" id="KGk-i7-Jjw" customClass="AddressTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="136"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="132.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="135.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Swh-VP-nth">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="5"/>
+                        <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="5" id="Nv6-H9-Az2"/>
+                        </constraints>
+                    </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hyb-px-6iy">
-                        <rect key="frame" x="0.0" y="87.5" width="375" height="1"/>
+                        <rect key="frame" x="0.0" y="90.5" width="375" height="1"/>
                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="sjv-Ng-hX7"/>
@@ -39,14 +46,14 @@
                         <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="广东省深圳市福田区桃园市桃园区大兴西路二段桃园市桃园区大兴西路二段" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DQX-2A-oMK">
-                        <rect key="frame" x="24" y="37" width="327" height="42.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="广东省深圳市福田区桃园市桃园区大兴西路二段桃园市桃园区大兴西路二段" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DQX-2A-oMK">
+                        <rect key="frame" x="24" y="37" width="327" height="45.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="center" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wXs-eE-jWb">
-                        <rect key="frame" x="16" y="88.5" width="100" height="44"/>
+                        <rect key="frame" x="16" y="91.5" width="100" height="44"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="dDe-dy-K3E"/>
                         </constraints>
@@ -61,7 +68,7 @@
                         <state key="selected" image="ic_Shopping_Choice_pressed"/>
                     </button>
                     <button opaque="NO" contentMode="center" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tjZ-AU-Ls3">
-                        <rect key="frame" x="205" y="88.5" width="62" height="44"/>
+                        <rect key="frame" x="205" y="91.5" width="62" height="44"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="62" id="bgX-37-Jig"/>
                         </constraints>
@@ -75,7 +82,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="center" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xUE-ly-bQU">
-                        <rect key="frame" x="297" y="88.5" width="62" height="44"/>
+                        <rect key="frame" x="297" y="91.5" width="62" height="44"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="62" id="f2e-n5-LlD"/>
                         </constraints>
@@ -85,18 +92,11 @@
                             <color key="titleColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Swh-VP-nth">
-                        <rect key="frame" x="0.0" y="128" width="375" height="5"/>
-                        <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="5" id="OCn-G8-5bg"/>
-                        </constraints>
-                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Swh-VP-nth" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="2bc-yN-r6w"/>
+                    <constraint firstAttribute="trailing" secondItem="Swh-VP-nth" secondAttribute="trailing" id="32Z-Qa-QQL"/>
                     <constraint firstItem="sgT-1E-MbV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="3mO-ZB-naZ"/>
-                    <constraint firstItem="Swh-VP-nth" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="3q0-tu-Ptp"/>
-                    <constraint firstAttribute="trailing" secondItem="Swh-VP-nth" secondAttribute="trailing" id="4jK-ea-Zp9"/>
                     <constraint firstAttribute="bottom" secondItem="wXs-eE-jWb" secondAttribute="bottom" id="6Id-zp-JEI"/>
                     <constraint firstItem="DQX-2A-oMK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="6jT-tk-0Hs"/>
                     <constraint firstItem="sgT-1E-MbV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="7iK-D0-nHY"/>
@@ -114,7 +114,7 @@
                     <constraint firstItem="xUE-ly-bQU" firstAttribute="top" secondItem="Hyb-px-6iy" secondAttribute="bottom" id="k5f-fI-qlc"/>
                     <constraint firstItem="Hyb-px-6iy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="kYk-Em-Yw3"/>
                     <constraint firstAttribute="bottom" secondItem="xUE-ly-bQU" secondAttribute="bottom" id="nFc-W4-uLR"/>
-                    <constraint firstItem="Swh-VP-nth" firstAttribute="top" secondItem="Hyb-px-6iy" secondAttribute="bottom" constant="39.5" id="q7f-rQ-HNx"/>
+                    <constraint firstItem="Swh-VP-nth" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="nqc-U4-gIA"/>
                     <constraint firstItem="DQX-2A-oMK" firstAttribute="top" secondItem="4ba-Lv-ohB" secondAttribute="bottom" constant="8" id="rcO-Oo-lU4"/>
                     <constraint firstAttribute="trailing" secondItem="xUE-ly-bQU" secondAttribute="trailing" constant="16" id="y1I-3D-gVw"/>
                     <constraint firstItem="wXs-eE-jWb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="yNN-yJ-7iF"/>
@@ -127,7 +127,7 @@
                 <outlet property="PhoneLabel" destination="4ba-Lv-ohB" id="d7h-28-Kos"/>
                 <outlet property="defBtn" destination="wXs-eE-jWb" id="6PV-nF-dwD"/>
             </connections>
-            <point key="canvasLocation" x="-323.5" y="27.5"/>
+            <point key="canvasLocation" x="-323.5" y="29"/>
         </tableViewCell>
     </objects>
     <resources>
