--- a/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetViewController.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetViewController.xib
@@ -20,9 +20,9 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="WPR-qz-bcn">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="WPR-qz-bcn">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="513"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="iHm-UZ-Hdd"/>
                         <outlet property="delegate" destination="-1" id="Gre-HA-gNC"/>
@@ -35,7 +35,8 @@
                             <rect key="frame" x="12" y="6" width="80" height="43"/>
                             <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="80" id="Tj7-aX-lJL"/>
+                                <constraint firstAttribute="width" constant="80" id="nvR-ht-bm2"/>
+                                <constraint firstAttribute="height" constant="43" id="smt-jh-Pkf"/>
                             </constraints>
                             <state key="normal" title="机选">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -49,44 +50,44 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                             <connections>
-                                <action selector="randomBut:" destination="-1" eventType="touchUpInside" id="lE5-hC-scM"/>
+                                <action selector="suijiBut:" destination="-1" eventType="touchUpInside" id="tNb-C6-FoM"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vag-ZQ-eQk">
                             <rect key="frame" x="250" y="0.0" width="70" height="55"/>
                             <color key="backgroundColor" red="0.98431372549019602" green="0.5607843137254902" blue="0.14509803921568626" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="70" id="rWP-uC-2b5"/>
+                                <constraint firstAttribute="width" constant="70" id="09I-Db-X2l"/>
+                                <constraint firstAttribute="height" constant="55" id="Vy0-Mj-cVj"/>
                             </constraints>
                             <state key="normal" title="确定">
                                 <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
-                                <action selector="determineBut:" destination="-1" eventType="touchUpInside" id="A5P-dS-Jf5"/>
+                                <action selector="sureBut:" destination="-1" eventType="touchUpInside" id="edr-Ix-dgo"/>
                             </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.95294117647058818" green="0.96078431372549022" blue="0.96862745098039216" alpha="0.55688820422535212" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="Vag-ZQ-eQk" firstAttribute="top" secondItem="fFB-vJ-K05" secondAttribute="top" id="8LP-cp-jTy"/>
-                        <constraint firstAttribute="height" constant="55" id="8mp-MM-y6i"/>
-                        <constraint firstAttribute="trailing" secondItem="Vag-ZQ-eQk" secondAttribute="trailing" id="MGG-JY-jKL"/>
-                        <constraint firstItem="vMK-rB-Bii" firstAttribute="leading" secondItem="fFB-vJ-K05" secondAttribute="leading" constant="12" id="Na5-Vi-NWH"/>
-                        <constraint firstAttribute="bottom" secondItem="Vag-ZQ-eQk" secondAttribute="bottom" id="kPd-kT-nxk"/>
-                        <constraint firstAttribute="bottom" secondItem="vMK-rB-Bii" secondAttribute="bottom" constant="6" id="l6l-jK-4Lt"/>
-                        <constraint firstItem="vMK-rB-Bii" firstAttribute="top" secondItem="fFB-vJ-K05" secondAttribute="top" constant="6" id="udz-0e-ZJ7"/>
+                        <constraint firstItem="vMK-rB-Bii" firstAttribute="top" secondItem="fFB-vJ-K05" secondAttribute="top" constant="6" id="6dB-vG-B1R"/>
+                        <constraint firstAttribute="height" constant="55" id="CZy-ZQ-0m1"/>
+                        <constraint firstItem="vMK-rB-Bii" firstAttribute="leading" secondItem="fFB-vJ-K05" secondAttribute="leading" constant="12" id="LjA-Xl-Zbk"/>
+                        <constraint firstItem="Vag-ZQ-eQk" firstAttribute="top" secondItem="fFB-vJ-K05" secondAttribute="top" id="QQJ-5T-lNP"/>
+                        <constraint firstAttribute="trailing" secondItem="Vag-ZQ-eQk" secondAttribute="trailing" id="f6W-JL-Q5l"/>
+                        <constraint firstAttribute="bottom" secondItem="Vag-ZQ-eQk" secondAttribute="bottom" id="qaa-F7-Kaz"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fFB-vJ-K05" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="1DR-Db-cqu"/>
-                <constraint firstItem="WPR-qz-bcn" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="6f3-8I-bdf"/>
-                <constraint firstItem="WPR-qz-bcn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6fb-Cc-vgT"/>
-                <constraint firstItem="fFB-vJ-K05" firstAttribute="top" secondItem="WPR-qz-bcn" secondAttribute="bottom" id="JZI-Vg-hxS"/>
-                <constraint firstAttribute="trailing" secondItem="fFB-vJ-K05" secondAttribute="trailing" id="YKh-3i-QuG"/>
-                <constraint firstItem="WPR-qz-bcn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="jfF-s2-3xJ"/>
-                <constraint firstAttribute="bottom" secondItem="fFB-vJ-K05" secondAttribute="bottom" id="qfq-y0-qu1"/>
+                <constraint firstAttribute="trailing" secondItem="WPR-qz-bcn" secondAttribute="trailing" id="2fs-g0-caB"/>
+                <constraint firstItem="WPR-qz-bcn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="4XC-83-tjg"/>
+                <constraint firstItem="fFB-vJ-K05" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="EwB-Jp-7GW"/>
+                <constraint firstAttribute="bottom" secondItem="fFB-vJ-K05" secondAttribute="bottom" id="Ogz-5F-mxp"/>
+                <constraint firstItem="fFB-vJ-K05" firstAttribute="top" secondItem="WPR-qz-bcn" secondAttribute="bottom" id="Sis-f3-Fd7"/>
+                <constraint firstAttribute="trailing" secondItem="fFB-vJ-K05" secondAttribute="trailing" id="Ucv-ow-k81"/>
+                <constraint firstItem="WPR-qz-bcn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ju0-Cr-5Wf"/>
             </constraints>
             <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
